chore: fix tsconfig

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
 
     client_max_body_size 25M;
-    server_name quip.shub.club;
+    server_name qtip.shub.club;
 
     location / {
         proxy_pass http://localhost:4115;
