--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,7 +61,10 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
 
     /* Advanced Options */
+    "skipLibCheck": true,
     "resolveJsonModule": true,                /* Include modules imported with '.json' extension */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "exclude": ["ecosystem.config.js", "node_modules/**/*"],
+  "include": ["src/**/*"]
 }
