--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongodb": "^3.5.14",
+    "@types/multer": "^1.4.3",
+    "@types/multer-s3": "^2.7.7",
     "@types/node": "^13.13.4",
     "@types/showdown": "^1.9.3",
     "node-sass": "^4.14.0",
@@ -35,10 +37,13 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "aws-sdk": "^2.668.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "mongodb": "^3.5.6",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "showdown": "^1.9.1"
   }
 }
