--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     // "sourceMap": true,                     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
     "outDir": "dist",                         /* Redirect output structure to the directory. */
-    "rootDir": "src/server",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    "rootDir": "src",                         /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "tsBuildInfoFile": "./",               /* Specify file to store incremental compilation information */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -66,5 +66,5 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": ["ecosystem.config.js", "node_modules/**/*"],
-  "include": ["src/**/*"]
+  "include": ["src/server/**/*", "src/shared/**/*"]
 }
