chore: fix mlab setting

--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
   "image": "heroku/nodejs",
   "addons": [
     {
-      "plan": "mongolab:shared-single-small",
+      "plan": "mongolab:shared-cluster-1",
       "as": "MONGO"
     }
   ]
